[package]
name = "catflap"
version = "1.2.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
categories = ["command-line-utilities", "development-tools"]
description = "Creates a TCP socket and passes its descriptor as an env variable"
homepage = "https://github.com/passcod/catflap"
keywords = ["socket", "reload", "server"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/passcod/catflap"

[dependencies]
clap = "2.33.1"
libc = "0.2.71"
nix = "0.17.0"
